[fix bug 1332667] Fix CSS linting errors for /firefox

--- a/media/css/firefox/all.less
+++ b/media/css/firefox/all.less
@@ -153,20 +153,20 @@ body.nightly {
             a {
                 display: block;
                 padding: 10px 10px 10px 45px;
-                background: transparent url(/media/img/firefox/all/download-icons-desktop.png) left center no-repeat;
+                background: transparent url('/media/img/firefox/all/download-icons-desktop.png') left center no-repeat;
             }
 
             &.win64 a {
-                background-position: -300px 50%
+                background-position: -300px 50%;
             }
             &.linux a {
-                background-position: -600px 50%
+                background-position: -600px 50%;
             }
             &.linux64 a {
-                background-position: -900px 50%
+                background-position: -900px 50%;
             }
             &.osx a {
-                background-position: -1200px 50%
+                background-position: -1200px 50%;
             }
             &[class*="android"] a {
                 .at2x('/media/img/firefox/all/download-icons-android.png', 40px, 120px);
