--- a/media/css/firefox/android.less
+++ b/media/css/firefox/android.less
@@ -244,14 +244,14 @@ html[dir="rtl"] {
     position: absolute;
     top: 0;
     left: 60px;
-    background: url(/media/img/firefox/android/customize/bg-phone.jpg) top left no-repeat;
+    background: url('/media/img/firefox/android/customize/bg-phone.jpg') top left no-repeat;
     width: 224px;
     height: 453px;
     z-index: 1;
 
     figure {
         // fallback bg for non-js users - not localized, but mostly pictures and a small user base, so...
-        background: url(/media/img/l10n/en-US/firefox/android/customize/desktop-faves1.jpg) top left no-repeat;
+        background: url('/media/img/l10n/en-US/firefox/android/customize/desktop-faves1.jpg') top left no-repeat;
         width: 201px;
         height: 317px;
         position: relative;
@@ -275,7 +275,7 @@ html[dir="rtl"] {
             width: 146px;
             left: -150px;
             top: 24px;
-            background-image: url(/media/img/firefox/android/customize/sprite-lines.png);
+            background-image: url('/media/img/firefox/android/customize/sprite-lines.png');
             .transition(opacity 0.3s ease);
         }
     }
@@ -303,7 +303,7 @@ html[dir="rtl"] {
                 margin-right: -30px;
                 width: 16px;
                 height: 1em;
-                background-image: url(data:image/ping;base64,iVBORw0KGgoAAAANSUhEUgAAAEAAAAAQAgMAAADbiZG6AAAACVBMVEUAc6pISEj///+X8T7aAAAAA3RSTlP//wDXyg1BAAAAH0lEQVR4AWNYtTJrFRis0AJTdBIIhQIGKMAQGCCHAQBHA49nS35W6gAAAABJRU5ErkJggg==);
+                background-image: url('data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAEAAAAAQAgMAAADbiZG6AAAACVBMVEUAc6pISEj///+X8T7aAAAAA3RSTlP//wDXyg1BAAAAH0lEQVR4AWNYtTJrFRis0AJTdBIIhQIGKMAQGCCHAQBHA49nS35W6gAAAABJRU5ErkJggg==');
                 background-repeat: no-repeat;
                 content: '';
             }
@@ -403,7 +403,7 @@ html[dir="rtl"] {
         display: block;
         position: absolute;
         z-index: 4;
-        background-image: url(/media/img/firefox/android/customize/sprite-arrows.png);
+        background-image: url('/media/img/firefox/android/customize/sprite-arrows.png');
         width: 28px;
         height: 44px;
         background-color: transparent;
@@ -473,7 +473,7 @@ html[dir="rtl"] #phone-wrapper figure {
         &:before {
             display: block;
             // each icon in sprite is at left edge of 300px wide area
-            background: url(/media/img/firefox/android/sprite-privacy.png) left top no-repeat;
+            background: url('/media/img/firefox/android/sprite-privacy.png') left top no-repeat;
             content: '';
             margin: 0 auto;
             width: 200px;
@@ -718,24 +718,24 @@ html[lang="ja"] #privacy p {
 
     .js {
         .customize-section .line {
-            background-image: url(/media/img/firefox/android/customize/sprite-lines-high-res.png);
+            background-image: url('/media/img/firefox/android/customize/sprite-lines-high-res.png');
             .background-size(249px, 428px);
         }
 
         .customize-pager {
-            background-image: url(/media/img/firefox/android/customize/sprite-arrows-high-res.png);
+            background-image: url('/media/img/firefox/android/customize/sprite-arrows-high-res.png');
             .background-size(56px, 44px);
         }
     }
 
     #phone-wrapper {
-        background-image: url(/media/img/firefox/android/customize/bg-phone-high-res.jpg);
+        background-image: url('/media/img/firefox/android/customize/bg-phone-high-res.jpg');
         .background-size(224px, 453px);
     }
 
     #privacy li {
         &:before {
-            background-image: url(/media/img/firefox/android/sprite-privacy-high-res.png);
+            background-image: url('/media/img/firefox/android/sprite-privacy-high-res.png');
             .background-size(1200px, 142px);
         }
     }
