--- a/media/css/firefox/desktop/common.less
+++ b/media/css/firefox/desktop/common.less
@@ -14,9 +14,9 @@
 @linkYellow: #ffcc00;
 
 .grainy-sky() {
-    background: #eeeeee url(/media/img/sandstone/grain.png) repeat;
-    background: url(/media/img/sandstone/bg-gradient-sky.png) repeat-x 0 0,
-                url(/media/img/sandstone/grain.png) repeat 0 0,
+    background: #eeeeee url('/media/img/sandstone/grain.png') repeat;
+    background: url('/media/img/sandstone/bg-gradient-sky.png') repeat-x 0 0,
+                url('/media/img/sandstone/grain.png') repeat 0 0,
                 #eeeeee;
 }
 
@@ -312,7 +312,7 @@ html[lang^="en"] {
         text-align: right;
         .font-size(@baseFontSize);
         line-height: 40px;
-        background: url(/media/img/firefox/desktop/sprite-browser-logos.png) right top no-repeat;
+        background: url('/media/img/firefox/desktop/sprite-browser-logos.png') right top no-repeat;
         padding: 0 70px 0 0;
         letter-spacing: 0;
     }
@@ -374,7 +374,7 @@ html[lang^="en"] {
     }
 
     #speed-ie10-rank {
-        width: 45%
+        width: 45%;
     }
 
     #speed-opera-rank {
@@ -899,7 +899,7 @@ html[dir="rtl"] {
         width: 440px;
 
         dt {
-            width: 0px; // has 70px right padding for logo
+            width: 0; // has 70px right padding for logo
         }
 
         .browser {
