--- a/media/css/firefox/desktop/customize.less
+++ b/media/css/firefox/desktop/customize.less
@@ -84,7 +84,7 @@ html[dir="rtl"] {
     a {
         position: relative;
         display: block;
-        background: url(/media/img/firefox/desktop/customize/sprite-customizers.png) -290px top no-repeat;
+        background: url('/media/img/firefox/desktop/customize/sprite-customizers.png') -290px top no-repeat;
         padding-top: 180px;
         text-transform: uppercase;
         color: #4e4f53;
@@ -183,7 +183,7 @@ html[dir="rtl"] {
             width: 23px;
             height: 33px;
             margin: 0 10px 0 0;
-            background: url(/media/img/firefox/desktop/customize/sync-arrows-button.png) left center no-repeat;
+            background: url('/media/img/firefox/desktop/customize/sync-arrows-button.png') left center no-repeat;
         }
     }
 
@@ -273,7 +273,7 @@ html[dir="rtl"] {
                 position: absolute;
                 display: inline-block;
                 content: '';
-                background: url(/media/img/firefox/desktop/customize/next-arrow.png) right center no-repeat;
+                background: url('/media/img/firefox/desktop/customize/next-arrow.png') right center no-repeat;
                 width: 14px;
                 height: 21px;
                 padding: 0 0 0 10px;
@@ -330,19 +330,19 @@ html[dir="rtl"] {
             }
 
             #theme-yellow {
-                background-image: url(/media/img/firefox/desktop/customize/theme-thumb-yellow.png);
+                background-image: url('/media/img/firefox/desktop/customize/theme-thumb-yellow.png');
             }
 
             #theme-green {
-                background-image: url(/media/img/firefox/desktop/customize/theme-thumb-green.png);
+                background-image: url('/media/img/firefox/desktop/customize/theme-thumb-green.png');
             }
 
             #theme-blue {
-                background-image: url(/media/img/firefox/desktop/customize/theme-thumb-blue.png);
+                background-image: url('/media/img/firefox/desktop/customize/theme-thumb-blue.png');
             }
 
             #theme-red {
-                background-image: url(/media/img/firefox/desktop/customize/theme-thumb-red.png);
+                background-image: url('/media/img/firefox/desktop/customize/theme-thumb-red.png');
             }
         }
 
@@ -396,7 +396,7 @@ html[dir="rtl"] {
             left: 14px;
 
             &:after {
-                background: url(/media/img/firefox/desktop/customize/next-arrow-rtl.png) left center no-repeat;
+                background: url('/media/img/firefox/desktop/customize/next-arrow-rtl.png') left center no-repeat;
                 padding: 0 10px 0 0;
             }
         }
@@ -428,7 +428,7 @@ html[dir="rtl"] {
         .stage div {
             opacity: 0;
             position: absolute;
-            background-image: url(/media/img/firefox/desktop/customize/animations/flexible-sprite.png);
+            background-image: url('/media/img/firefox/desktop/customize/animations/flexible-sprite.png');
             background-repeat: no-repeat;
         }
     }
@@ -442,7 +442,7 @@ html[dir="rtl"] {
             z-index: 2;
             width: 919px;
             height: 126px;
-            background: url(/media/img/firefox/desktop/customize/animations/flexible-sprite.png) left top no-repeat;
+            background: url('/media/img/firefox/desktop/customize/animations/flexible-sprite.png') left top no-repeat;
 
             #browser-customize-orange {
                 right: 5px;
@@ -1451,7 +1451,7 @@ html[dir="rtl"] {
             z-index: 4;
             top: 40px;
             left: 105px;
-            background: url(/media/img/firefox/desktop/customize/animations/customizers-icons-sprite.png) left top no-repeat;
+            background: url('/media/img/firefox/desktop/customize/animations/customizers-icons-sprite.png') left top no-repeat;
             width: 103px;
             height: 95px;
         }
@@ -1556,7 +1556,7 @@ html[dir="rtl"] {
 
         #puzzle-off {
             z-index: 1;
-            background: url(/media/img/firefox/desktop/customize/animations/customizers-icons-sprite.png) -120px top no-repeat;
+            background: url('/media/img/firefox/desktop/customize/animations/customizers-icons-sprite.png') -120px top no-repeat;
             width: 90px;
             height: 87px;
             left: 113px;
@@ -1566,7 +1566,7 @@ html[dir="rtl"] {
         #puzzle-on {
             opacity: 0;
             z-index: 2;
-            background: url(/media/img/firefox/desktop/customize/animations/customizers-icons-sprite.png) -220px top no-repeat;
+            background: url('/media/img/firefox/desktop/customize/animations/customizers-icons-sprite.png') -220px top no-repeat;
             width: 181px;
             height: 181px;
             left: 57px;
@@ -1644,7 +1644,7 @@ html[dir="rtl"] {
             height: 43px;
             top: 36px;
             left: 58px;
-            background: url(/media/img/firefox/desktop/customize/animations/customizers-icons-sprite.png) 0 -190px no-repeat;
+            background: url('/media/img/firefox/desktop/customize/animations/customizers-icons-sprite.png') 0 -190px no-repeat;
         }
 
         .slat {
@@ -1709,7 +1709,7 @@ html[dir="rtl"] {
        (                min-resolution: 144dpi) {
 
     #customize .feature-list li a {
-        background-image: url(/media/img/firefox/desktop/customize/sprite-customizers-hires.png);
+        background-image: url('/media/img/firefox/desktop/customize/sprite-customizers-hires.png');
         background-size: 1080px 600px;
     }
 }
@@ -1850,7 +1850,7 @@ html[dir="rtl"] {
 
         #customizer-list li a {
             padding-top: 180px;
-            background-image: url(/media/img/firefox/desktop/customize/sprite-customizers.png);
+            background-image: url('/media/img/firefox/desktop/customize/sprite-customizers.png');
         }
     }
 
@@ -1927,7 +1927,7 @@ html[dir="rtl"] {
         min-height: 0;
         padding-top: 180px;
         padding-bottom: @baseLine * 2;
-        background-image: url(/media/img/firefox/desktop/customize/sprite-customizers.png);
+        background-image: url('/media/img/firefox/desktop/customize/sprite-customizers.png');
         background-repeat: no-repeat;
     }
 
@@ -2028,7 +2028,7 @@ html[dir="rtl"] {
        only screen and (max-width: @breakTablet) and (                min-resolution: 144dpi) {
 
     #main-content .customizer .container {
-        background-image: url(/media/img/firefox/desktop/customize/sprite-customizers-hires.png);
+        background-image: url('/media/img/firefox/desktop/customize/sprite-customizers-hires.png');
         background-size: 1080px 600px;
     }
 }
