--- a/media/css/firefox/desktop/tips.less
+++ b/media/css/firefox/desktop/tips.less
@@ -55,7 +55,7 @@
 #page-header {
     padding-top: 20px;
     background: @linkBlue;
-    box-shadow: inset 0 12px 38px 0px rgba(0, 0, 0, 0.1),
+    box-shadow: inset 0 12px 38px 0 rgba(0, 0, 0, 0.1),
                 inset 0 -46px 0 0 #2f7bbc;
 
     .container {
@@ -124,7 +124,7 @@
         a {
             height: 40px;
             width: 120px;
-            background: url(/media/img/firefox/desktop/tips/sprite-tabs.png) left -84px no-repeat;
+            background: url('/media/img/firefox/desktop/tips/sprite-tabs.png') left -84px no-repeat;
             text-align: center;
             color: #fff;
             .font-size(@smallFontSize);
@@ -441,7 +441,7 @@ html[dir='rtl'] {
        (                min-resolution: 144dpi) {
 
         #tips-nav-direct li a {
-            background-image: url(/media/img/firefox/desktop/tips/sprite-tabs-high-res.png);
+            background-image: url('/media/img/firefox/desktop/tips/sprite-tabs-high-res.png');
             background-size: 180px 84px;
         }
 }
@@ -461,7 +461,7 @@ html[dir='rtl'] {
     }
 
     #page-header {
-        box-shadow: inset 0 12px 38px 0px rgba(0, 0, 0, 0.1),
+        box-shadow: inset 0 12px 38px 0 rgba(0, 0, 0, 0.1),
                     inset 0 -40px 0 0 #2f7bbc;
 
         .container {
@@ -521,7 +521,7 @@ html[dir='rtl'] {
             button {
                 width: 60px;
                 height: 60px;
-                background-image: url(/media/img/firefox/desktop/tips/sprite-arrows.png);
+                background-image: url('/media/img/firefox/desktop/tips/sprite-arrows.png');
                 background-repeat: no-repeat;
                 overflow: hidden;
                 .image-replaced();
@@ -566,7 +566,7 @@ html[dir='rtl'] {
        only screen and (min-width: @breakTablet) and (max-width: @breakDesktop) and (                min-resolution: 144dpi) {
 
     .js #tips-nav-prev-next button {
-        background-image: url(/media/img/firefox/desktop/tips/sprite-arrows-high-res.png);
+        background-image: url('/media/img/firefox/desktop/tips/sprite-arrows-high-res.png');
         background-size: 120px 60px;
     }
 }
@@ -600,7 +600,7 @@ html[dir='rtl'] {
     }
 
     #page-header {
-        box-shadow: inset 0 12px 38px 0px rgba(0, 0, 0, 0.1),
+        box-shadow: inset 0 12px 38px 0 rgba(0, 0, 0, 0.1),
                     inset 0 -16px 0 0 #2f7bbc;
 
         h1 {
@@ -706,7 +706,7 @@ html[dir='rtl'] {
             button {
                 width: 60px;
                 height: 60px;
-                background-image: url(/media/img/firefox/desktop/tips/sprite-arrows.png);
+                background-image: url('/media/img/firefox/desktop/tips/sprite-arrows.png');
                 background-repeat: no-repeat;
                 overflow: hidden;
                 .image-replaced();
@@ -821,7 +821,7 @@ html[dir='rtl'] {
        only screen and (max-width: @breakTablet) and (                min-resolution: 144dpi) {
 
     .js #tips-nav-prev-next button {
-        background-image: url(/media/img/firefox/desktop/tips/sprite-arrows-high-res.png);
+        background-image: url('/media/img/firefox/desktop/tips/sprite-arrows-high-res.png');
         background-size: 120px 60px;
     }
 }
@@ -838,7 +838,7 @@ html[dir='rtl'] {
 
     #page-header {
         width: 100%;
-        box-shadow: inset 0 12px 38px 0px rgba(0, 0, 0, 0.1),
+        box-shadow: inset 0 12px 38px 0 rgba(0, 0, 0, 0.1),
                     inset 0 -8px 6px -4px #2f7bbc;
         padding-bottom: 0;
         overflow: hidden;
@@ -868,7 +868,7 @@ html[dir='rtl'] {
         top: auto;
         bottom: -228px;
         margin-left: -150px;
-        background: url(/media/img/firefox/template/logo-large-high-res.png) left top no-repeat;
+        background: url('/media/img/firefox/template/logo-large-high-res.png') left top no-repeat;
         background-size: 300px 312px;
         .animation(phoenix 2s ease 1.3s 1 normal forwards);
     }
