--- a/media/css/firefox/desktop/trust.less
+++ b/media/css/firefox/desktop/trust.less
@@ -23,7 +23,7 @@
 }
 
 #intro {
-    background: #fcfcfa url(/media/img/firefox/desktop/bg-pixelfox-new.png) center bottom no-repeat;
+    background: #fcfcfa url('/media/img/firefox/desktop/bg-pixelfox-new.png') center bottom no-repeat;
     position: relative;
     z-index: 1;
 
@@ -38,8 +38,8 @@
 }
 
 #safe {
-    background: #eeeeee url(/media/img/sandstone/grain.png) repeat;
-    background: url(/media/img/sandstone/grain.png) repeat 0 0,
+    background: #eeeeee url('/media/img/sandstone/grain.png') repeat;
+    background: url('/media/img/sandstone/grain.png') repeat 0 0,
                 #eeeeee;
 }
 
@@ -55,7 +55,7 @@
         li {
             float: none;
             display: inline-block;
-            background: url(/media/img/firefox/desktop/trust/sprite-privacy.png) center top no-repeat;
+            background: url('/media/img/firefox/desktop/trust/sprite-privacy.png') center top no-repeat;
             margin-right: @baseLine;
             padding-top: 180px;
             vertical-align: top;
@@ -85,7 +85,7 @@
 }
 
 #safe .feature-list li {
-    background: url(/media/img/firefox/desktop/trust/sprite-safe.png) center top no-repeat;
+    background: url('/media/img/firefox/desktop/trust/sprite-safe.png') center top no-repeat;
     padding-top: 180px;
 
     &#safe-protection {
@@ -98,9 +98,9 @@
 }
 
 #no-worries {
-    background: #5d7489 url(/media/img/firefox/desktop/trust/bg-no-worries.png) center bottom no-repeat;
-    background: url(/media/img/firefox/desktop/trust/bg-no-worries.png) center bottom no-repeat,
-        url(/media/img/firefox/desktop/trust/bg-no-worries-gradient.png) left bottom repeat-x,
+    background: #5d7489 url('/media/img/firefox/desktop/trust/bg-no-worries.png') center bottom no-repeat;
+    background: url('/media/img/firefox/desktop/trust/bg-no-worries.png') center bottom no-repeat,
+        url('/media/img/firefox/desktop/trust/bg-no-worries-gradient.png') left bottom repeat-x,
         #5d7489;
 
     .container {
@@ -145,12 +145,12 @@ html[dir="rtl"] {
        (                min-resolution: 144dpi) {
 
     #privacy .feature-list li {
-        background-image: url(/media/img/firefox/desktop/trust/sprite-privacy-hires.png);
+        background-image: url('/media/img/firefox/desktop/trust/sprite-privacy-hires.png');
         background-size: 1540px 160px;
     }
 
     #safe .feature-list li {
-        background-image: url(/media/img/firefox/desktop/trust/sprite-safe-hires.png);
+        background-image: url('/media/img/firefox/desktop/trust/sprite-safe-hires.png');
         background-size: 1080px 160px;
     }
 }
