--- a/media/css/firefox/developer.less
+++ b/media/css/firefox/developer.less
@@ -68,7 +68,7 @@
 }
 
 .tools {
-    background: #142c43 url(/media/img/firefox/developer/tools-background.jpg) 50% 50% no-repeat;
+    background: #142c43 url('/media/img/firefox/developer/tools-background.jpg') 50% 50% no-repeat;
     text-align: center;
     .container {
         padding-top: @baseLine * 4;
