--- a/media/css/firefox/family-nav.less
+++ b/media/css/firefox/family-nav.less
@@ -6,7 +6,7 @@
 
 // mixin for sprite images
 .fxfamilynav-sprite(@top) {
-    background-image: url(/media/img/firefox/family/nav-sprite.png);
+    background-image: url('/media/img/firefox/family/nav-sprite.png');
     background-position: 0 @top;
 
     @media (-webkit-min-device-pixel-ratio: 1.5),
@@ -14,7 +14,7 @@
        (                min-resolution: 144dpi) {
 
         .background-size(98px 115px);
-        background-image: url(/media/img/firefox/family/nav-sprite-high-res.png);
+        background-image: url('/media/img/firefox/family/nav-sprite-high-res.png');
     }
 }
 
@@ -422,7 +422,7 @@
     cursor: pointer;
     float: left;
     height: 26px;
-    letter-spacing: 0px;
+    letter-spacing: 0;
     margin-top: 72px;
     opacity: 0;
     width: 36px;
