--- a/media/css/firefox/firstrun/new-firstrun.less
+++ b/media/css/firefox/firstrun/new-firstrun.less
@@ -189,7 +189,7 @@ img {
 
     #sunrise, #sky, #mountains, #trees, #foreground-fox {
         opacity: 1;
-        transition: transform 2s cubic-bezier(.9,.03,.60,.22) .3s;
+        transition: transform 2s cubic-bezier(.9,.03,.6,.22) .3s;
     }
 
     #sunrise {
@@ -210,6 +210,6 @@ img {
     }
 
     #foreground-fox {
-        transform: scale(2.5) translate3d(0, 28%, 0)
+        transform: scale(2.5) translate3d(0, 28%, 0);
     }
 }
