--- a/media/css/firefox/ios.less
+++ b/media/css/firefox/ios.less
@@ -91,7 +91,7 @@ a.go {
         @media only screen and (max-width: @breakTablet) {
             padding: 40px @gridGutterWidth 320px;
             // high res version of this image is declared later; can't nest media queries.
-            background: url(/media/img/firefox/ios/firefox-iphone-white-crop.png) center bottom no-repeat;
+            background: url('/media/img/firefox/ios/firefox-iphone-white-crop.png') center bottom no-repeat;
         }
     }
 
@@ -750,7 +750,7 @@ a.go {
        only screen and (max-width: @breakTablet) and (min-resolution: 144dpi) {
 
     .section-intro .container {
-        background-image: url(/media/img/firefox/ios/firefox-iphone-white-crop-high-res.png);
+        background-image: url('/media/img/firefox/ios/firefox-iphone-white-crop-high-res.png');
         .background-size(210px 290px);
     }
 }
