--- a/media/css/firefox/os/firefox-os-2-5.less
+++ b/media/css/firefox/os/firefox-os-2-5.less
@@ -318,7 +318,7 @@ section {
 
     .fxos-try p {
         .font-size(18px);
-        letter-spacing: 0px;
+        letter-spacing: 0;
     }
 
     .fxos-mdn {
@@ -343,7 +343,7 @@ section {
             width: 60%;
         }
         .form-submit {
-            width: auto
+            width: auto;
         }
     }
 }
