--- a/media/css/firefox/private_browsing/private-browsing.less
+++ b/media/css/firefox/private_browsing/private-browsing.less
@@ -130,7 +130,7 @@ html, body {
     }
 
     #tracking-protection-animation .shield-container {
-        margin: 0 0 0 -25px
+        margin: 0 0 0 -25px;
     }
 
     .ios & .critter-animation {
@@ -186,7 +186,7 @@ html, body {
     }
     h3 {
         .open-sans();
-        margin: 0px;
+        margin: 0;
         padding: 0 15px;
         min-height: 95px;
     }
@@ -567,7 +567,7 @@ html.ios[lang^='es-ES']{
 /* RTL support */
 html[dir="rtl"] {
     .private-browsing:after {
-        content:none
+        content:none;
     }
     .with-tracking:after {
         color: #6fbf4a;
