--- a/media/css/firefox/releasenotes.less
+++ b/media/css/firefox/releasenotes.less
@@ -6,7 +6,7 @@
 
 .space #wrapper {
     background-repeat: no-repeat;
-    background-position: 0px 180px;
+    background-position: 0 180px;
     background-image: url('/media/img/firefox/releasenotes/aurora_bg_800.png');
 }
 
@@ -222,7 +222,7 @@ article {
     }
 
     .tag {
-        background: #f3f3f3 url(/media/img/firefox/releasenotes/tags.png) 0 0 no-repeat;
+        background: #f3f3f3 url('/media/img/firefox/releasenotes/tags.png') 0 0 no-repeat;
         border-right: 3px solid #ccc;
         box-shadow: 0 1px 1px rgba(0,0,0,0.05), 0 -1px 0 rgba(0,0,0,0.05) inset;
         color: @textColorPrimary;
