--- a/media/css/firefox/sync.less
+++ b/media/css/firefox/sync.less
@@ -145,7 +145,7 @@
         display: none;
 
         &.active {
-            display: block
+            display: block;
         }
     }
 
@@ -268,7 +268,7 @@
     padding-top: @baseLine * 2;
     text-align: left;
     // Source image: /media/img/firefox/sync/stripes.png
-    background-image: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAwgAAAAFCAQAAABLegPfAAAALUlEQVR4Ae3VIREAAAgEwUtD/4goSLFm5/Sbr6lIkvwgSboDkiQvSJIsI5AkF0T5v+/j2Q2AAAAAAElFTkSuQmCC);
+    background-image: url('data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAwgAAAAFCAQAAABLegPfAAAALUlEQVR4Ae3VIREAAAgEwUtD/4goSLFm5/Sbr6lIkvwgSboDkiQvSJIsI5AkF0T5v+/j2Q2AAAAAAElFTkSuQmCC');
     background-position: 0 0;
     background-repeat: repeat-x;
     section {
