--- a/media/css/firefox/tracking-protection-tour.less
+++ b/media/css/firefox/tracking-protection-tour.less
@@ -50,7 +50,7 @@ body {
         margin-bottom: @baseLine;
         background-color: #E3F1DD;
         border: 2px dashed #70be4a;
-        background-image: url(/media/img/firefox/tracking-protection/grid.png);
+        background-image: url('/media/img/firefox/tracking-protection/grid.png');
         background-repeat: repeat;
 
         &:after {
@@ -59,7 +59,7 @@ body {
             left: 0;
             right: 0;
             bottom: 0;
-            background-image: url(/media/img/firefox/tracking-protection/shield.svg);
+            background-image: url('/media/img/firefox/tracking-protection/shield.svg');
             background-repeat: no-repeat;
             background-position: center center;
             filter: drop-shadow(0 2px 2px rgba(68, 68, 68, 0.3));
@@ -129,7 +129,7 @@ main > header {
         .justify-content(space-between);
         width: @widthDesktop - (@gridGutterWidth * 2);
         margin: 0 auto;
-        background-image: url(/media/img/firefox/tracking-protection/shield.svg);
+        background-image: url('/media/img/firefox/tracking-protection/shield.svg');
         background-position: center left;
         background-repeat: no-repeat;
         .background-size(48px, 48px);
@@ -328,7 +328,7 @@ noscript {
     width: 16px;
     height: 16px;
     line-height: 16px;
-    background-image: url(/media/img/firefox/tracking-protection/close-linux.svg);
+    background-image: url('/media/img/firefox/tracking-protection/close-linux.svg');
     background-size: 96px, 16px;
 
     &:hover,
