--- a/media/css/firefox/whatsnew-tw-hk-49.less
+++ b/media/css/firefox/whatsnew-tw-hk-49.less
@@ -17,8 +17,8 @@
 
     #outer-wrapper {
         // default to 'sky' background for less jarring transition
-        background: url(/media/img/sandstone/bg-gradient-sky.png) repeat-x,
-                    url(/media/img/sandstone/grain.png) repeat,
+        background: url('/media/img/sandstone/bg-gradient-sky.png') repeat-x,
+                    url('/media/img/sandstone/grain.png') repeat,
                     #eee;
 
         // hide the "up to date" message and footer
