--- a/media/css/firefox/desktop/fast.less
+++ b/media/css/firefox/desktop/fast.less
@@ -33,9 +33,9 @@
 }
 
 #cutting-edge {
-    background: #43505b url(/media/img/firefox/desktop/fast/bg-cutting-edge-knight.png) center center no-repeat;
-    background: url(/media/img/firefox/desktop/fast/bg-cutting-edge-knight.png) center center no-repeat,
-        #43505b url(/media/img/firefox/desktop/fast/bg-cutting-edge.jpg) center center no-repeat;
+    background: #43505b url('/media/img/firefox/desktop/fast/bg-cutting-edge-knight.png') center center no-repeat;
+    background: url('/media/img/firefox/desktop/fast/bg-cutting-edge-knight.png') center center no-repeat,
+        #43505b url('/media/img/firefox/desktop/fast/bg-cutting-edge.jpg') center center no-repeat;
 
     .container {
         .container-dark();
@@ -90,7 +90,7 @@ html[dir="rtl"] {
             z-index: 1;
             width: 919px;
             height: 304px;
-            background: url(/media/img/firefox/desktop/fast/feel-browserchrome.png) top left no-repeat;
+            background: url('/media/img/firefox/desktop/fast/feel-browserchrome.png') top left no-repeat;
         }
 
         #feel-page1 {
@@ -99,7 +99,7 @@ html[dir="rtl"] {
             z-index: 2;
             width: 909px;
             height: 204px;
-            background: url(/media/img/firefox/desktop/fast/feel-page1.png) top left no-repeat;
+            background: url('/media/img/firefox/desktop/fast/feel-page1.png') top left no-repeat;
         }
 
         #feel-page2 {
@@ -109,7 +109,7 @@ html[dir="rtl"] {
             z-index: 3;
             width: 909px;
             height: 204px;
-            background: url(/media/img/firefox/desktop/fast/feel-page2.png) top left no-repeat;
+            background: url('/media/img/firefox/desktop/fast/feel-page2.png') top left no-repeat;
         }
 
         //// tabs
@@ -131,7 +131,7 @@ html[dir="rtl"] {
             top: 35px;
             width: 78px;
             height: 35px;
-            background: url(/media/img/firefox/desktop/fast/feel-animation-sprite.png) left -40px no-repeat;
+            background: url('/media/img/firefox/desktop/fast/feel-animation-sprite.png') left -40px no-repeat;
         }
 
         #feel-newtab-plus {
@@ -140,7 +140,7 @@ html[dir="rtl"] {
             top: 11px;
             width: 12px;
             height: 12px;
-            background: url(/media/img/firefox/desktop/fast/feel-animation-sprite.png) left -80px no-repeat;
+            background: url('/media/img/firefox/desktop/fast/feel-animation-sprite.png') left -80px no-repeat;
         }
 
         #feel-tab {
@@ -148,7 +148,7 @@ html[dir="rtl"] {
             left: 10px;
             width: 257px;
             height: 34px;
-            background: url(/media/img/firefox/desktop/fast/feel-animation-sprite.png) left top no-repeat;
+            background: url('/media/img/firefox/desktop/fast/feel-animation-sprite.png') left top no-repeat;
         }
 
         #feel-tabclose {
@@ -158,7 +158,7 @@ html[dir="rtl"] {
             left: 0;
             width: 10px;
             height: 10px;
-            background: url(/media/img/firefox/desktop/fast/feel-animation-sprite.png) left -100px no-repeat;
+            background: url('/media/img/firefox/desktop/fast/feel-animation-sprite.png') left -100px no-repeat;
         }
 
         #feel-tabclose-orange {
@@ -168,7 +168,7 @@ html[dir="rtl"] {
             left: 225px;
             width: 10px;
             height: 10px;
-            background: url(/media/img/firefox/desktop/fast/feel-animation-sprite.png) -20px -100px no-repeat;
+            background: url('/media/img/firefox/desktop/fast/feel-animation-sprite.png') -20px -100px no-repeat;
         }
 
         //// awesomebar
@@ -187,7 +187,7 @@ html[dir="rtl"] {
             left: 43px;
             width: 66px;
             height: 23px;
-            background: url(/media/img/firefox/desktop/fast/feel-animation-sprite.png) left -140px no-repeat;
+            background: url('/media/img/firefox/desktop/fast/feel-animation-sprite.png') left -140px no-repeat;
         }
 
         #feel-awesomebar-url {
@@ -196,7 +196,7 @@ html[dir="rtl"] {
             left: 21px;
             width: 0;
             height: 14px;
-            background: url(/media/img/firefox/desktop/fast/feel-animation-sprite.png) left -120px no-repeat;
+            background: url('/media/img/firefox/desktop/fast/feel-animation-sprite.png') left -120px no-repeat;
         }
 
         #feel-awesomebar-suggestions-highlight {
@@ -206,7 +206,7 @@ html[dir="rtl"] {
             left: 4px;
             width: 436px;
             height: 33px;
-            background: url(/media/img/firefox/desktop/fast/feel-animation-sprite.png) left -260px no-repeat;
+            background: url('/media/img/firefox/desktop/fast/feel-animation-sprite.png') left -260px no-repeat;
         }
 
         #feel-awesomebar-suggestions {
@@ -215,7 +215,7 @@ html[dir="rtl"] {
             top: 32px;
             width: 444px;
             height: 74px;
-            background: url(/media/img/firefox/desktop/fast/feel-animation-sprite.png) left -180px no-repeat;
+            background: url('/media/img/firefox/desktop/fast/feel-animation-sprite.png') left -180px no-repeat;
         }
 
         //// star/bookmark icons
@@ -234,22 +234,22 @@ html[dir="rtl"] {
         #feel-star {
             opacity: 1;
             z-index: 1;
-            background: url(/media/img/firefox/desktop/fast/feel-animation-sprite.png) left -300px no-repeat;
+            background: url('/media/img/firefox/desktop/fast/feel-animation-sprite.png') left -300px no-repeat;
         }
 
         #feel-star-orange {
             z-index: 2;
-            background: url(/media/img/firefox/desktop/fast/feel-animation-sprite.png) left -340px no-repeat;
+            background: url('/media/img/firefox/desktop/fast/feel-animation-sprite.png') left -340px no-repeat;
         }
 
         #feel-star-orange-hopper {
             z-index: 2;
-            background: url(/media/img/firefox/desktop/fast/feel-animation-sprite.png) left -340px no-repeat;
+            background: url('/media/img/firefox/desktop/fast/feel-animation-sprite.png') left -340px no-repeat;
         }
 
         #feel-star-filled {
             z-index: 3;
-            background: url(/media/img/firefox/desktop/fast/feel-animation-sprite.png) left -380px no-repeat;
+            background: url('/media/img/firefox/desktop/fast/feel-animation-sprite.png') left -380px no-repeat;
         }
 
         #feel-bookmarks {
@@ -258,7 +258,7 @@ html[dir="rtl"] {
             left: 732px;
             width: 18px;
             height: 18px;
-            background: url(/media/img/firefox/desktop/fast/feel-animation-sprite.png) left -400px no-repeat;
+            background: url('/media/img/firefox/desktop/fast/feel-animation-sprite.png') left -400px no-repeat;
         }
     }
 
@@ -435,12 +435,12 @@ html[dir="rtl"] {
         // show the suggestions under the awesomebar
         @-webkit-keyframes feel-awesomebar-suggestions-in {
             99.9% { opacity: 0; }
-            100% { opacity: 1 }
+            100% { opacity: 1; }
         }
 
         @keyframes feel-awesomebar-suggestions-in {
             99.9% { opacity: 0; }
-            100% { opacity: 1 }
+            100% { opacity: 1; }
         }
 
         // show the highlight over the suggestions
@@ -695,8 +695,8 @@ html[dir="rtl"] {
 @media (max-width: @breakDesktop) and (min-width: @breakTablet) {
     #cutting-edge {
         background: #43505b;
-        background: url(/media/img/firefox/desktop/fast/bg-cutting-edge-knight.png) -300px center no-repeat,
-            #43505b url(/media/img/firefox/desktop/fast/bg-cutting-edge.jpg) center center no-repeat;
+        background: url('/media/img/firefox/desktop/fast/bg-cutting-edge-knight.png') -300px center no-repeat,
+            #43505b url('/media/img/firefox/desktop/fast/bg-cutting-edge.jpg') center center no-repeat;
 
         .container {
             width: 380px;
