--- a/media/css/firefox/desktop/index.less
+++ b/media/css/firefox/desktop/index.less
@@ -21,7 +21,7 @@
 }
 
 #intro {
-    background: #B1D2E3 url(/media/img/firefox/desktop/index/bg-intro.png) left top repeat-x;
+    background: #B1D2E3 url('/media/img/firefox/desktop/index/bg-intro.png') left top repeat-x;
 
     .container {
         position: relative;
@@ -45,7 +45,7 @@
     .fx-privacy-link {
         a:link,
         a:visited {
-            color: @linkBlue
+            color: @linkBlue;
         }
     }
 }
@@ -66,7 +66,7 @@
         content: '';
         width: 24px;
         height: 24px;
-        background: transparent url(/media/img/firefox/template/icon-check.svg) left top no-repeat;
+        background: transparent url('/media/img/firefox/template/icon-check.svg') left top no-repeat;
         margin-right: 5px;
         vertical-align: text-bottom;
     }
@@ -77,7 +77,7 @@ html[lang^="en"] #sticky-download-desktop .download-link .download-content {
 }
 
 #trust {
-    background: #fcfcfa url(/media/img/firefox/desktop/bg-pixelfox-new.png) center bottom no-repeat;
+    background: #fcfcfa url('/media/img/firefox/desktop/bg-pixelfox-new.png') center bottom no-repeat;
 
     a {
         .open-sans;
@@ -129,12 +129,12 @@ html[lang^="en"] #sticky-download-desktop .download-link .download-content {
                 width: 929px;
                 height: 456px;
                 margin: 0 auto;
-                background: url(/media/img/firefox/desktop/index/animations/flexible-sprite.png) left top no-repeat;
+                background: url('/media/img/firefox/desktop/index/animations/flexible-sprite.png') left top no-repeat;
 
                 div {
                     opacity: 0;
                     position: absolute;
-                    background-image: url(/media/img/firefox/desktop/index/animations/flexible-sprite.png);
+                    background-image: url('/media/img/firefox/desktop/index/animations/flexible-sprite.png');
                     background-repeat: no-repeat;
                 }
             }
