--- a/media/css/firefox/feedback.less
+++ b/media/css/firefox/feedback.less
@@ -5,7 +5,7 @@
 @import "../sandstone/lib.less";
 
 @font-face {
-    font-family: 'FA-Icons-Contact';
+    font-family: FA-Icons-Contact;
     src: url('/media/fonts/icons-contact.woff2?20-12-2016') format('woff2'),
          url('/media/fonts/icons-contact.woff?20-12-2016') format('woff');
     font-weight: normal;
@@ -75,7 +75,7 @@ main {
             display: block;
             width: 100px;
             height: 100px;
-            background-image: url(/media/img/firefox/feedback/cta-icons.png);
+            background-image: url('/media/img/firefox/feedback/cta-icons.png');
             background-repeat: no-repeat;
             position: absolute;
             top: 10px;
@@ -83,7 +83,7 @@ main {
             margin-left: -50px;
 
             @media @highdpi {
-                background-image: url(/media/img/firefox/feedback/cta-icons-high-res.png);
+                background-image: url('/media/img/firefox/feedback/cta-icons-high-res.png');
                 .background-size(100px 300px);
             }
         }
@@ -133,7 +133,7 @@ main {
         min-height: 4em;
 
         &:before {
-            font-family: 'FA-Icons-Contact';
+            font-family: FA-Icons-Contact;
             content: '\e810';
             .font-size(22px);
             font-weight: normal;
@@ -171,7 +171,7 @@ main {
         padding-left: @gridGutterWidth;
 
         &:before {
-            font-family: 'FA-Icons-Contact';
+            font-family: FA-Icons-Contact;
             margin-right: 8px;
         }
     }
