--- a/media/css/firefox/nightly_firstrun.less
+++ b/media/css/firefox/nightly_firstrun.less
@@ -18,8 +18,8 @@ h4,
 }
 
 .sky #outer-wrapper {
-    background: url(/media/img/firefox/firstrun/grain.png) repeat-x,
-                url(/media/img/firefox/firstrun/background-nightly.jpg) no-repeat top center,
+    background: url('/media/img/firefox/firstrun/grain.png') repeat-x,
+                url('/media/img/firefox/firstrun/background-nightly.jpg') no-repeat top center,
                 linear-gradient(to bottom, rgba(0, 0, 0, 0) 0%,rgba(0, 0, 0, 1) 580px),
                 #003357;
 }
@@ -27,7 +27,7 @@ h4,
 #firstrun-header {
     margin: 0;
     padding-top: 240px;
-    background: url(/media/img/firefox/firstrun/logo-nightly.png) no-repeat 50% 30px;
+    background: url('/media/img/firefox/firstrun/logo-nightly.png') no-repeat 50% 30px;
     text-align: center;
 }
 
@@ -71,13 +71,13 @@ main {
                 margin-right: 0;
             }
             &.localize .title {
-                background: url(/media/img/firefox/firstrun/localize.png) no-repeat top center;
+                background: url('/media/img/firefox/firstrun/localize.png') no-repeat top center;
             }
             &.code .title {
-                background: url(/media/img/firefox/firstrun/code.png) no-repeat top center;
+                background: url('/media/img/firefox/firstrun/code.png') no-repeat top center;
             }
             &.test .title {
-                background: url(/media/img/firefox/firstrun/test.png) no-repeat top center;
+                background: url('/media/img/firefox/firstrun/test.png') no-repeat top center;
             }
             .title {
                 padding-top: 85px;
@@ -111,7 +111,7 @@ main {
         padding: 30px;
         &.badge {
             padding: 0 30px 0 150px;
-            background: url(/media/img/firefox/firstrun/nightly-badge.png) no-repeat 60px 50%, rgba(133, 156, 238, .15);
+            background: url('/media/img/firefox/firstrun/nightly-badge.png') no-repeat 60px 50%, rgba(133, 156, 238, .15);
             h3 {
                 display: inline-block;
                 margin: 20px 0 5px 0;
@@ -164,7 +164,7 @@ html[dir="rtl"] {
     }
     .blue-box.badge {
         padding: 0 150px 0 30px;
-        background: url(/media/img/firefox/firstrun/nightly-badge.png) no-repeat right 60px bottom 50%, rgba(133, 156, 238, .15);
+        background: url('/media/img/firefox/firstrun/nightly-badge.png') no-repeat right 60px bottom 50%, rgba(133, 156, 238, .15);
     }
 }
 
