--- a/media/css/firefox/unsupported.less
+++ b/media/css/firefox/unsupported.less
@@ -78,7 +78,7 @@ html[dir='rtl']  #wrapper {
 
 
 html[lang='si'], html[lang='bn-IN'], html[lang='ka'], html[lang='kn']  {
-    font-size:85%
+    font-size:85%;
 }
 
 html[lang="th"] #details-header p {
@@ -86,23 +86,23 @@ html[lang="th"] #details-header p {
 }
 
 html[lang='th'] li{
-    line-height:1.2em
+    line-height:1.2em;
 }
 
 
 html[lang='kn'] h1,  html[lang='kn'] li, html[lang='kn'] p {
-    line-height:1.5em
+    line-height:1.5em;
 }
 
 html[lang='te'] li {
-    line-height:1.5em
+    line-height:1.5em;
 }
 
 /* Tweaks for Japanese */
 html[lang='ja'] body {
     font-size: 12px;
     line-height: 1.5;
-    font-family: "Lucida Grande", "DejaVu Sans", "Bitstream Vera Sans", "ヒラギノ角ゴ Pro W3", "Hiragino Kaku Gothic Pro", "メイリオ", "Meiryo", "Verdana", "ＭＳ Ｐゴシック", "MS PGothic", "VL Pゴシック", "Takao Pゴシック", "IPA Pゴシック", sans-serif;
+    font-family: "Lucida Grande", "DejaVu Sans", "Bitstream Vera Sans", "ヒラギノ角ゴ Pro W3", "Hiragino Kaku Gothic Pro", "メイリオ", Meiryo, Verdana, "ＭＳ Ｐゴシック", "MS PGothic", "VL Pゴシック", "Takao Pゴシック", "IPA Pゴシック", sans-serif;
 }
 
 html[lang='ja'] h1 {
