--- a/media/css/firefox/whatsnew/whatsnew-50.less
+++ b/media/css/firefox/whatsnew/whatsnew-50.less
@@ -25,7 +25,7 @@ main {
         position: relative;
 
         span:before {
-            background-image: url(/media/img/firefox/template/icon-check.svg);
+            background-image: url('/media/img/firefox/template/icon-check.svg');
             background-repeat: no-repeat;
             content: '';
             display: inline-block;
